After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 663309 - mpegvideoparse: Fix in picture header parse.
mpegvideoparse: Fix in picture header parse.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 0.10.23
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-03 12:17 UTC by sreerenj
Modified: 2011-11-14 12:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix in picture header parse. (2.23 KB, patch)
2011-11-03 12:17 UTC, sreerenj
committed Details | Review

Description sreerenj 2011-11-03 12:17:12 UTC
Created attachment 200584 [details] [review]
Fix in picture header parse.

Correct the skipping of vbv_delay in picture header and some typo fixes.
Comment 1 sreerenj 2011-11-14 09:44:53 UTC
any update ?