mpegvideoparse:Correct the skipping of vbv_delay in picture header and some typo fixes.

https://bugzilla.gnome.org/show_bug.cgi?id=663309